--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,21 @@
 {
     "compilerOptions": {
-        "removeComments": false,
-        "preserveConstEnums": true,
-        "sourceMap": true,
-        "declaration": true,
-        "noImplicitAny": true,
-        "noImplicitReturns": true,
-        "suppressImplicitAnyIndexErrors": true,
-        "strictNullChecks": true,
-        "noUnusedLocals": true,
-        "noImplicitThis": true,
-        "noUnusedParameters": true,
         "module": "commonjs",
+        "target": "es5",
+        "allowJs": true,
+        "checkJs": false,
+        "jsx": "react-jsx",
+        "outDir": "./build",
+        "rootDir": "./src",
+        "removeComments": true,
+        "noEmit": true,
+        "pretty": true,
+        "skipLibCheck": true,
+        "strict": true,
         "moduleResolution": "node",
         "esModuleInterop": true,
-        "pretty": true,
-        "target": "ES2019",
-        "outDir": "lib"
     },
-    "formatCodeOptions": {
-        "indentSize": 2,
-        "tabSize": 2
-    },
-    "exclude": [
-        "node_modules",
-        "lib"
+    "include": [
+        "src/"
     ]
 }
